--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -121,12 +121,14 @@
 .cu_wrap .pic .start img{width:50px;}
 .cu_wrap .pic>a>img{width:100%;height:100%;object-fit:contain;}
 .cu_wrap .inner{float:left;width:500px;color:#616161;}
+.cu_wrap .inner ul{margin:10px 25px;}
+.cu_wrap .inner ul li{list-style:disc;}
 .cu_wrap .inner>strong{font-size:26px;display:block;line-height:1.2;font-weight:100;}
 .cu_wrap .inner>strong>span{display:none;}
-.cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;margin:15px 0;}
+.cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;}
 .cu_wrap .inner>p{border-bottom:1px solid #ccc;padding-bottom:20px;}
-.cu_wrap .inner>address{margin-top:-20px;}
-.cu_wrap .inner .btn{margin-top:20px;display:inline-block;}
+.cu_wrap .inner>em.note{margin-top:-20px;}
+.cu_wrap .inner .btn{margin-top:20px;/*display:inline-block;*/}
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
 .cu_wrap .inner .btn>a{float:left;text-decoration:none;color:#000;font-size:20px;border:1px solid #000;padding:3px 20px;line-height:30px;}
 
@@ -152,7 +154,7 @@
   .cu_wrap .inner{float:none;width:100%;margin-top:10px;}
   .cu_wrap .inner>strong{font-size:17px;}
   .cu_wrap .inner>strong>span{display:inline-block;}
-  .cu_wrap .inner>span{margin:10px 0;}
+  /*.cu_wrap .inner>span{margin:10px 0;}*/
   .cu_wrap .inner>p{padding-bottom:10px;margin-bottom:0;border:none;}
   .cu_wrap .inner .btn{margin:10px 0;}
   .cu_wrap .inner .btn>em,
