--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -41,6 +41,7 @@
 .show_wrap .show_box .show_inner .hotdeal_inner p.sp_des{margin:0;}
 .show_wrap .show_box .hotdeal_img{position:relative;}
 .trix-container{max-height:300px;overflow:hidden;transition:max-height .5s ease;position:relative;}
+.recommend_trix{max-height:200px;margin-top:20px;border-top:1px solid #ccc;border-bottom:1px solid #ccc;}
 .trix-container.show{max-height:2000px;}
 .gradient::before{content:'';height:120px;position:absolute;bottom:0px;left:0;width:100%;background:linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 70%);transition:height .25s ease;}
 .show.gradient::before{ height:50px;}
