--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -26,7 +26,7 @@
                 <div class="show_more_inner">
                   <em><%= recommend.re_filter %></em>
                   <h3><%= link_to recommend.re_title, recommend %></h3>
-                  <!-- <p><%= link_to recommend.re_intro, recommend %></p> -->
+                  <p><%= link_to recommend.re_intro, recommend %></p>
                 </div>
               </div>
             <% end %>
@@ -36,7 +36,11 @@
       </div><!--./re_show_wrap-->
     </div><!--./wrap-->
   </div><!--./cu_wrap-->
-
-  
-    
 </div><!--./layout-->
+<script type="text/javascript">
+  //Show orLess More 
+  $('.show-btn').click(function() {
+    $('.trix-container').toggleClass("show");
+    $(this).toggleClass("rotate");
+  });
+</script>
