--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -127,6 +127,7 @@
 .cu_wrap .inner>strong>span{display:none;}
 .cu_wrap .inner>span{display:inline-block;border-bottom:1px solid #ccc;}
 .cu_wrap .inner>p{border-bottom:1px solid #ccc;padding-bottom:20px;}
+.cu_wrap .inner>h4{margin:10px 0 -20px 0;}
 .cu_wrap .inner>em.note{margin-top:-20px;}
 .cu_wrap .inner .btn{margin-top:20px;/*display:inline-block;*/}
 .cu_wrap .inner .btn>em{float:left;font-size:20px;background:#000;color:#fff;padding:3px 20px;border:1px solid #000;line-height:30px;}
