--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -22,51 +22,56 @@
             <p>Post Num.1</p>
             <%= f.input :sub_title_01 %>
             <%= f.input :sub_image_01 %>
-            <%= f.input :sub_intro_01, as: :trix_editor %>
             <%= f.input :sub_price_01 %>
             <%= f.input :sub_source_01 %>
+            <%= f.input :sub_intro_01, as: :trix_editor %>
             <%= f.input :sub_link_01 %>
             <%= f.input :sub_youtube_01 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.2</p>
             <%= f.input :sub_title_02 %>
             <%= f.input :sub_image_02 %>
-            <%= f.input :sub_intro_02, as: :trix_editor %>
             <%= f.input :sub_price_02 %>
             <%= f.input :sub_source_02 %>
+            <%= f.input :sub_intro_02, as: :trix_editor %>
             <%= f.input :sub_link_02 %>
             <%= f.input :sub_youtube_02 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.3</p>
             <%= f.input :sub_title_03 %>
             <%= f.input :sub_image_03 %>
-            <%= f.input :sub_intro_03, as: :trix_editor %>
             <%= f.input :sub_price_03 %>
             <%= f.input :sub_source_03 %>
+            <%= f.input :sub_intro_03, as: :trix_editor %>
             <%= f.input :sub_link_03 %>
             <%= f.input :sub_youtube_03 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.4</p>
             <%= f.input :sub_title_04 %>
             <%= f.input :sub_image_04 %>
-            <%= f.input :sub_intro_04, as: :trix_editor %>
             <%= f.input :sub_price_04 %>
             <%= f.input :sub_source_04 %>
+            <%= f.input :sub_intro_04, as: :trix_editor %>
             <%= f.input :sub_link_04 %>
             <%= f.input :sub_youtube_04 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.5</p>
             <%= f.input :sub_title_05 %>
             <%= f.input :sub_image_05 %>
-            <%= f.input :sub_intro_05, as: :trix_editor %>            
             <%= f.input :sub_price_05 %>
             <%= f.input :sub_source_05 %>
+            <%= f.input :sub_intro_05, as: :trix_editor %>            
             <%= f.input :sub_link_05 %>
             <%= f.input :sub_youtube_05 %>
+            <%= f.button :submit %>
           </div>
         </div>
 
@@ -75,51 +80,56 @@
             <p>Post Num.6</p>
             <%= f.input :sub_title_06 %>
             <%= f.input :sub_image_06 %>
-            <%= f.input :sub_intro_06, as: :trix_editor %>
             <%= f.input :sub_price_06 %>
             <%= f.input :sub_source_06 %>
+            <%= f.input :sub_intro_06, as: :trix_editor %>
             <%= f.input :sub_link_06 %>
             <%= f.input :sub_youtube_06 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.7</p>
             <%= f.input :sub_title_07 %>
             <%= f.input :sub_image_07 %>
-            <%= f.input :sub_intro_07, as: :trix_editor %>
             <%= f.input :sub_price_07 %>
             <%= f.input :sub_source_07 %>
+            <%= f.input :sub_intro_07, as: :trix_editor %>
             <%= f.input :sub_link_07 %>
             <%= f.input :sub_youtube_07 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.8</p>
             <%= f.input :sub_title_08 %>
             <%= f.input :sub_image_08 %>
-            <%= f.input :sub_intro_08, as: :trix_editor %>
             <%= f.input :sub_price_08 %>
             <%= f.input :sub_source_08 %>
+            <%= f.input :sub_intro_08, as: :trix_editor %>
             <%= f.input :sub_link_08 %>
             <%= f.input :sub_youtube_08 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.9</p>
             <%= f.input :sub_title_09 %>
             <%= f.input :sub_image_09 %>
-            <%= f.input :sub_intro_09, as: :trix_editor %>
             <%= f.input :sub_price_09 %>
             <%= f.input :sub_source_09 %>
+            <%= f.input :sub_intro_09, as: :trix_editor %>
             <%= f.input :sub_link_09 %>
             <%= f.input :sub_youtube_09 %>
+            <%= f.button :submit %>
           </div>
           <div class="input_box">
             <p>Post Num.10</p>
             <%= f.input :sub_title_10 %>
             <%= f.input :sub_image_10 %>
-            <%= f.input :sub_intro_10, as: :trix_editor %>
             <%= f.input :sub_price_10 %>
             <%= f.input :sub_source_10 %>
+            <%= f.input :sub_intro_10, as: :trix_editor %>
             <%= f.input :sub_link_10 %>
             <%= f.input :sub_youtube_10 %>
+            <%= f.button :submit %>
           </div>
         </div>
         <div class="input_footer">
