--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -672,7 +672,10 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 /* all_deals */
 .all_wrap{}
+.all_wrap .check_more{background:#000;color:#fff;padding:10px;}
+.all_wrap .check_more a{color:#fff;}
 .all_wrap .all_hotdeals, .all_wrap .all_promocodes{margin:0 1% 20px 1%;}
+.all_wrap .all_hotdeals, .all_wrap .all_promocodes
 .all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
 .all_box{border-bottom:1px solid #ccc;padding:5px;margin-bottom:10px;}
 
