--- a/app/views/recommends/_form.html.erb
+++ b/app/views/recommends/_form.html.erb
@@ -132,9 +132,7 @@
             <%= f.button :submit %>
           </div>
         </div>
-        <div class="input_footer">
-          <%= f.button :submit %>
-        </div>
+        <div class="input_footer"><%= f.button :submit %></div>
 
       <% end %>
     </div>
