--- a/app/views/recommends/show.html.erb
+++ b/app/views/recommends/show.html.erb
@@ -26,7 +26,7 @@
                 <div class="show_more_inner">
                   <em><%= recommend.re_filter %></em>
                   <h3><%= link_to recommend.re_title, recommend %></h3>
-                  <p><%= link_to recommend.re_intro, recommend %></p>
+                  <!-- <p><%= link_to recommend.re_intro, recommend %></p> -->
                 </div>
               </div>
             <% end %>
