--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -674,9 +674,11 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 .all_wrap{}
 .all_wrap .check_more{background:#000;color:#fff;padding:10px;}
 .all_wrap .check_more a{color:#fff;}
-.all_wrap .all_hotdeals, .all_wrap .all_promocodes{margin:0 1% 20px 1%;}
-.all_wrap .all_hotdeals, .all_wrap .all_promocodes
-.all_wrap .all_hotdeals span, .all_wrap .all_promocodes em{margin-top:20px;display:block;}
+.all_wrap .common{margin:0 1% 20px 1%;}
+.all_wrap .common span{margin-top:20px;}
+.all_wrap .common .h_price .span_01{color:#616161;text-decoration:line-through;font-size:15px;}
+.all_wrap .common .h_price .span_02{margin-left:10px;font-size:15px;}
+.all_wrap .common .h_price .span_02 em{color:#ff4d4d;font-weight:bold;}
 .all_box{border-bottom:1px solid #ccc;padding:5px;margin-bottom:10px;}
 
 
@@ -684,14 +686,15 @@ nav.most_m_popup ul li{padding:6px 10px 3px 10px;border-bottom:1px solid #ccc;}
 
 /* About SNS */
 .for_sns{width:500px;}
-.for_sns .wrapping{position:relative;margin-bottom:30px;}
+.for_sns .wrapping{margin-bottom:30px;}
 .for_sns .wrapping .image{width:500px;height:500px;}
 .for_sns .wrapping .image img{width:100%;height:100%;padding:30px;}
-.for_sns .wrapping .title{position:absolute;top:0;left:0;background:rgba(0,136,255,0.8);padding:5px;width:100%;color:#fff;padding:10px;}
-.for_sns .wrapping .info{position:absolute;bottom:0;left:0;background:rgba(0,136,255,0.8);padding:5px;width:100%;color:#fff;padding:5px 10px;}
+.for_sns .wrapping .title{}
+.for_sns .wrapping .info{}
 .for_sns .wrapping .info p{font-size:17px;}
 .for_sns .wrapping .info p em{text-decoration:line-through;font-size:15px;}
 .for_sns .wrapping .info p span{font-size:15px;}
+.for_sns .wrapping .info a{color:#08f;display:block;}
 .for_sns .wrapping .info table{border-collapse: collapse;width:100%;}
 .for_sns .wrapping .info table, td, th{border: 1px solid #000;}
 
