--- a/app/assets/stylesheets/hotdeals.css
+++ b/app/assets/stylesheets/hotdeals.css
@@ -106,7 +106,7 @@
 .deals_card .image_box .mark em{display:block;letter-spacing:3.1px;}
 .deals_card .image_box .term{width:70px;height:42px;/*background:#ff0000;*/}
 .deals_card .image_box .term p{margin-top:6px;font-size:10px;}
-.deals_card .image_box .exprie{background:#ff0000;}
+.deals_card .image_box .exprie{background:#ff4d4d;}
 .deals_card .image_box .endtoday{background:#ffa500;width:80px;}
 .deals_card .image_box .endtoday p{margin:0;}
 .deals_card .image_box .expried{-webkit-filter: grayscale(100%);filter: gray;height:100%;}
