--- a/app/views/deals/all_deals.html.erb
+++ b/app/views/deals/all_deals.html.erb
@@ -8,48 +8,57 @@
       <label for="tab1">Amazon Hodeals(KOR)</label>
       <input type="radio" name="tab" id="tab2">
       <label for="tab2">Amazon Hodeals(ENG)</label>
-      <input type="radio" name="tab" id="tab3">
+      <!-- <input type="radio" name="tab" id="tab3">
       <label for="tab3">Archives</label>
       <input type="radio" name="tab" id="tab4">
-      <label for="tab4">Contact</label>
+      <label for="tab4">Contact</label> -->
     
       <div class="tab-content-wrapper">
         <div id="tab-content-1" class="tab-content">
           <div class="all_wrap">
-            <div class="all_promocodes">
+            <div class="common promocodes">
               <h2>오늘의 아마존 할인 코드</h2>
               <% @promocodes.each do |promocode| %>
+                <!-- <p><%= promocode.p_spare_06 %></p> -->
                 <p><%= promocode.p_title %></p>
                 <% if promocode.p_spare_03.present? %>
-                  <p>Avg <%= promocode.p_spare_03 %> rates | <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
+                  <p>평균 평점: Avg <%= promocode.p_spare_03 %> rates | 리뷰 수: <%= number_with_delimiter(promocode.p_spare_04) %>+ reviews </p>
                 <% end %>
                 <% running_total = 0 %>
                 <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
-                <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
+                <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with 할인 코드 <em>" <%= promocode.p_promocode %> "</em>)</span></p>
                 <a target="_blank" href="<%= promocode.p_link %>">[ 할인코드 사용하기 ]</a><br /><br />        
-                <% end %>
-              <em>더 많은 아마존 할인코드는 <a target="_blank" href="/promocodes">www.ohigottabuythis.net/promocodes</a></em>
+              <% end %>
+              <span class="check_more"><a target="_blank" href="/promocodes">할인코드 더보기 www.ohigottabuythis.net/promocodes</a></span>
             </div>
             <hr>
-            <div class="all_hotdeals">
+            <div class="common hotdeals">
               <h2>오늘의 아마존 핫딜</h2>
                 <% @hotdeals.each do |hotdeal| %>
+                  <!-- <p><%= hotdeal.h_spare_11 %></p> -->
                   <p><%= hotdeal.h_title %></p>
                   <% if hotdeal.h_spare_08.present? %>
-                    <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
+                    <p>평균 평점: Avg <%= hotdeal.h_spare_08 %> rates | 리뷰 수: <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
                   <% end %>
-                  <p><%= number_to_currency(hotdeal.h_spare_41) %> (Was: <%= number_to_currency(hotdeal.h_spare_42) %> | <%= 
-                  number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
+
+                  <% if hotdeal.h_spare_42.present? %>
+                  <p class="h_price"><%= number_to_currency(hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+                  <% else %>
+                    <% running_total = 0 %>
+                    <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
+                    <p class="h_price"><%= number_to_currency(hotdeal.h_spare_43) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_44) %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+                  <% end %>
+
                   <a target="_blank" href="<%= hotdeal.h_link %>">[ 핫딜 바로가기 ]</a><br /><br />
                 <% end %>
-              <span>더 많은 아마존 핫딜은 <a target="_blank" href="/hotdeals">www.ohigottabuythis.net/hotdeals</a></span>
+              <span class="check_more"><a target="_blank" href="/hotdeals">핫딜 더보기 www.ohigottabuythis.net/hotdeals</a></span>
             </div>
           </div><!--./all_wrap-->
         </div><!--#/tab-content-1-->
 
         <div id="tab-content-2" class="tab-content">
           <div class="all_wrap">
-            <div class="all_promocodes">
+            <div class="common promocodes">
               <h2>Today's Promo Codes On Amazon</h2>
               <% @promocodes.each do |promocode| %>
                 <div class="all_box clearfix">
@@ -59,14 +68,14 @@
                   <% end %>
                   <% running_total = 0 %>
                   <% running_total =  promocode.p_spare_26 - (promocode.p_spare_27 / 100) * promocode.p_spare_26 %>
-                  <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code [ <%= promocode.p_promocode %> ])</span></p>
+                  <p class="h_price"><%= number_to_currency(running_total) %> <span class="span_01">( Was: <%= number_to_currency(promocode.p_spare_26) %></span><span class="span_02"> | <%= number_to_percentage(promocode.p_spare_27, precision: 0) %> OFF with Promo Code <em>" <%= promocode.p_promocode %> "</em>)</span></p>
                   <a target="_blank" href="<%= promocode.p_link %>">[ Use Promo Code ]</a><br />
                 </div>     
                 <% end %>
               <span class="check_more"> <a target="_blank" href="/promocodes">Check More Promo Codes: www.ohigottabuythis.net/promocodes</a></span>
             </div>
             <hr>
-            <div class="all_hotdeals">
+            <div class="common hotdeals">
               <h2>Today's Bargain On Amazon</h2>
                 <% @hotdeals.each do |hotdeal| %>
                   <div class="all_box clearfix">
@@ -74,8 +83,13 @@
                     <% if hotdeal.h_spare_08.present? %>
                       <p>Avg <%= hotdeal.h_spare_08 %> rates | <%= number_with_delimiter(hotdeal.h_spare_09) %>+ reviews </p>
                     <% end %>
-                    <p><%= number_to_currency(hotdeal.h_spare_41) %> (Was: <%= number_to_currency(hotdeal.h_spare_42) %> | <%= 
-                    number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF)</p>
+                    <% if hotdeal.h_spare_42.present? %>
+                      <p class="h_price"><%= number_to_currency(hotdeal.h_spare_42) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_41) %></span><span class="span_02"> | <%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF )</span></p>
+                    <% else %>
+                      <% running_total = 0 %>
+                      <% running_total =  (hotdeal.h_spare_43 - hotdeal.h_spare_44) / hotdeal.h_spare_43 * 100 %>
+                      <p class="h_price"><%= number_to_currency(hotdeal.h_spare_43) %> <span class="span_01">( Was: <%= number_to_currency(hotdeal.h_spare_44) %></span><span class="span_02"> | <%= number_to_percentage(running_total, precision: 0) %> OFF )</span></p>
+                    <% end %>
                     <a target="_blank" href="<%= hotdeal.h_link %>">[ Take This Deals ]</a><br />
                   </div>
                 <% end %>
@@ -91,19 +105,23 @@
       </div>
     </div>
 
-   <!--  <div class="for_sns">
+   <!-- <div class="for_sns">
       <% @hotdeals.each do |hotdeal| %>
         <div class="wrapping">
          <div class="image"><img src="<%= hotdeal.h_image %>"></div>
-         <div class="title"><p><%= hotdeal.h_title %></p></div>
          <div class="info">
-          <p>$145.99 <em>$200.00</em><span>(40% OFF)</span></p>
+          <div class="title"><p><%= hotdeal.h_spare_11 %></p></div>
+          <p><%= hotdeal.h_spare_11 %>은 현재 아마존에서 </p>
+          <p><%= number_to_currency(hotdeal.h_spare_42) %> <em><%= number_to_currency(hotdeal.h_spare_41) %></em><span>(<%= number_to_percentage(hotdeal.h_percentage, precision: 0) %> OFF) | + 미국내 무료배송(구매금액이 $25 이상 또는 Prime 맴버일 경우 해당)</p></span>
+          <p>Tips</p>
+          <p></p>
           <p>$200이하 무관세 | 직배송 가능</p>
+          <h4><a href="<%= hotdeal.h_link %>">Check This Deals</a></h4>
          </div>
         </div>
       <% end %>
-    </div> -->
-
+    </div>
+ -->
 
 
 
