--- a/app/views/hotdeals/_form.html.erb
+++ b/app/views/hotdeals/_form.html.erb
@@ -13,6 +13,7 @@
     <%= f.input :h_title , label: 'Title Of Product' %>
     <%= f.input :h_spare_04, label: 'Image_Title' %>
     <%= f.input :h_keyword, label: ' gadgets, amazon, recommended, under $ ' %>
+    <%= f.input :h_spare_11, label: 'Korean Title' %>
     <%= f.input :h_spare_05, label: 'Hashtags' %>
     <div class="pricing clearfix">
       <%= f.input :h_spare_41, label: 'Original Price' %>
