--- a/app/views/promocodes/edit.html.erb
+++ b/app/views/promocodes/edit.html.erb
@@ -21,6 +21,7 @@
         <%= f.input :p_title , label: 'Title Of Product' %>
         <%= f.input :p_image_title, label: 'Image_Title' %>
         <%= f.input :p_keyword, label: ' gadgets, amazon, recommended, promo code, coupon, under $ ' %>
+        <%= f.input :p_spare_06, label: 'Korean Title' %>
         <%= f.input :p_hashtag, label: 'Hashtags' %>
         <div class="pricing clearfix">
           <!-- <%= f.input :p_spare_26, label: 'List Price' %> -->
