--- a/app/views/hotdeals/show.html.erb
+++ b/app/views/hotdeals/show.html.erb
@@ -91,8 +91,8 @@
               <% @hotdeal.h_spare_10 %>
               <em>+ Check via Subscribe & Save ( Save 5% Off now and up to 15% Off on auto-deliveries <span><a href="https://amzn.to/2BzWhT4" target="_blank">Learn more</a></span> )</em>
              <% end %>
-             <% if @hotdeal.h_spare_01.present? %><em class="extra_dh">+ <%= @hotdeal.h_spare_01 %>% Off Extra Deal</em><% end %>
-             <% if @hotdeal.h_spare_02.present? %><em class="extra_dh">+ <%= @hotdeal.h_spare_02 %> Off Coupon</em><% end %>
+             <% if @hotdeal.h_spare_01.present? %><em class="extra_dh">+ Get <%= @hotdeal.h_spare_01 %>% Off Extra Deal</em><% end %>
+             <% if @hotdeal.h_spare_02.present? %><em class="extra_dh">+ Clip the <%= @hotdeal.h_spare_02 %> Off Coupon</em><% end %>
             </div>
 
             <div class="btn">
@@ -105,7 +105,6 @@
                 <div class="show_des"><p class="description"><%= @hotdeal.h_description %></p></div>
               <% end %>
             <% end %>
-           
            
            </div>
           </div>
@@ -140,5 +139,7 @@
   </div>
 </div>
 <script><%= render(:partial => 'hotdeals', :handlers => [:erb], :formats => [:js]) %></script>
+
+
 
 
